<resources>
    <string name="app_name">Time Crunch</string>
    <string name="title_activity_tab">activity_tab</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="save">SAVE</string>


    //ToDo
    <string name="todo">TO-DO: </string>
    <string name="scheduleMe">Schedule Me!!!</string>



    //WelcomeActivity
    <string name="welcome">Welcome to</string>
    <string name="begin">Plan Your Day! </string>

    //NewTaskActivity
    <string name="titleDefault">Task Name</string>
    <string name="startDate">Start Date</string>
    <string name="endDate">End Date</string>
    <string name="from">From: </string>
    <string name="to">To: </string>
    <string name="repeat"> Repeat Forever</string>
    <string name="taskType"> Task Type:</string>
    <string name="tpd">Total Time Per Day: </string>
    <string name="hours">Hours: </string>
    <string name="min">Minutes: </string>
    <string name="defaultTime">0</string>
    <string name="blockTime">Don\'t Break Up This Task </string>
    <string name="date">%1$d-%2$d-%3$d</string>




    //SameNameFragment
    <string name="sameName">A task with this name already exists.</string>
    <string name="subTitle">Would you like to replace it?</string>
    <string name="replace">REPLACE </string>
    <string name="cancel">CANCEL </string>



    <string-array name="chooseType">
        <item>Study</item>
        <item>Exercise</item>
        <item>Other</item>
    </string-array>

    //Settings
    <string name="setting">Settings</string>
    <string name="setTime">Set Time</string>
    <string name="wakeTime">Wake Time:</string>
    <string name="bedtime">Bedtime:</string>
    <string name="sleepTime"> Desired hours of sleep: </string>

    <string-array name="sleepHours">
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="allHours">
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
    </string-array>

    <string-array name="allMin">
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>

    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
