<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.example.jasminemai.timecrunch.NewTask">

        <EditText
            android:id="@+id/eventName"
            android:layout_width="252dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="132dp"
            android:layout_marginTop="36dp"
            android:hint="@string/titleDefault"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginRight="132dp" />

        <EditText
            android:id="@+id/startDate"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginEnd="104dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:editable="false"
            android:ems="10"
            android:hint="@string/startDate"
            android:inputType="none"
            android:onClick="showDatePickerDialog"
            android:textIsSelectable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eventName"
            android:layout_marginRight="104dp" />

        <EditText
            android:id="@+id/endDate"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginEnd="100dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="28dp"
            android:editable="false"
            android:ems="10"
            android:hint="@string/endDate"
            android:inputType="none"
            android:onClick="showDatePickerDialog"
            android:textIsSelectable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/startDate" />

        <TextView
            android:id="@+id/from"
            android:layout_width="50dp"
            android:layout_height="43dp"
            android:layout_marginBottom="346dp"
            android:layout_marginTop="21dp"
            android:gravity="start"
            android:text="@string/from"
            android:textAlignment="viewStart"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/startDate"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eventName"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/to"
            android:layout_width="50dp"
            android:layout_height="43dp"
            android:layout_marginTop="24dp"
            android:text="@string/to"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/endDate"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/from" />

        <Switch
            android:id="@+id/repeat"
            android:layout_width="147dp"
            android:layout_height="39dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="196dp"
            android:text="@string/repeat"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:layout_width="371dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="282dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="11dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/to"
            app:layout_constraintVertical_bias="0.104">

            <TextView
                android:id="@+id/taskType"
                android:layout_width="81dp"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:text="@string/taskType"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/chooseTask"
                android:layout_width="256dp"
                android:layout_height="37dp"
                android:layout_weight="1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.528" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="409dp"
            android:layout_height="44dp"
            android:layout_marginBottom="282dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="11dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.972">

            <TextView
                android:layout_width="137dp"
                android:layout_height="31dp"
                android:layout_weight="1"
                android:text="TextView" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                tools:layout_editor_absoluteX="109dp"
                tools:layout_editor_absoluteY="297dp" />
        </LinearLayout>


    </android.support.constraint.ConstraintLayout>

</ScrollView>

